@@ -1,4 +1,4 @@
-This is jnettop 0.10.
+This is jnettop 0.10.1.
 It's a package, which should do simmilar job for network as top does for
 processes.
 
@@ -183,5 +183,5 @@ Copyright (C) 2002, 2003, 2004 Jakub Skopal
 Portions of the package are taken from the tcpdump project and their rights are
 held by their respective owners stated in the beginning of the files.
 
-$Header: /home/jakubs/DEV/jnettop-conversion/jnettop/README,v 1.13 2004-09-29 19:09:35 merunka Exp $
+$Header: /home/jakubs/DEV/jnettop-conversion/jnettop/README,v 1.14 2004-10-01 22:43:35 merunka Exp $
 
