@@ -1,3 +1,7 @@
+2004-10-02	Jakub Skopal <j@kubs.cz>
+
+ * fixed porting issues
+
 2004-09-29	Jakub Skopal <j@kubs.cz>
 
  * modification of IPv6 support
@@ -116,4 +120,4 @@
 
  * initial release
 
-$Header: /home/jakubs/DEV/jnettop-conversion/jnettop/ChangeLog,v 1.21 2004-09-30 17:52:04 merunka Exp $
+$Header: /home/jakubs/DEV/jnettop-conversion/jnettop/ChangeLog,v 1.22 2004-10-01 22:43:35 merunka Exp $
